Chapitre 4, version V1, release

--- a/04-Representation/source.tex
+++ b/04-Representation/source.tex
@@ -69,9 +69,9 @@ Cette expérience permettra à la fois d'illustrer les représentations et de so
     \centering
     \includegraphics[width=0.7\textwidth]{points3.pdf}
     \end{minipage}
-    \caption[Représentations classiques des poids d'une carte de Kohonen]{\label{fig:representation} Représentations possibles des poids d'une carte de Kohonen classique, dans le cas d'entrées sous forme d'imagettes ou de points en deux dimensions.\footnotemark[1]}
+    \caption[Représentations classiques des poids d'une carte de Kohonen]{\label{fig:representation} Représentations possibles des poids d'une carte de Kohonen classique, dans le cas d'entrées sous forme d'imagettes \footnotemark[1] ou de points en deux dimensions.}
     \end{figure}
-    \footnotetext[1]{Image de SOMs tirées du \href{https://frezza.pages.centralesupelec.fr/teachml2/Poly/Poly-ML-SDImetz.pdf}{polycopié d'apprentissage automatique} de CentraleSupelec Metz}
+    \footnotetext[1]{Image de SOM tirées du \href{https://frezza.pages.centralesupelec.fr/teachml2/Poly/Poly-ML-SDImetz.pdf}{polycopié d'apprentissage automatique} de CentraleSupelec Metz}
 Les cartes de Kohonen sont particulièrement associées à une facilité de représentation et de visualisation. Leur nombre réduit de prototypes et leur format de ligne ou grille permet d'en tracer une représentation visuelle interprétable.
 La représentation la plus couramment utilisée est de tracer les poids des prototypes d'une carte afin d'en visualiser l'organisation.
 
@@ -205,7 +205,7 @@ Cette formalisation statistique des entrées et des réponses permettra aussi d'
 \includegraphics[width=0.85\textwidth]{tests_2maps.pdf}
 \caption{Schéma décrivant une étape de test. Un test consiste à présenter successivement des réalisations de $\mathbf{X}$, notées $(\inpx\m{1}_t,\inpx\m{2}_t)$, et à effectuer la recherche de BMU par relaxation.
 Contrairement à une phase d'apprentissage dans laquelle les poids sont mis à jour à partir des valeurs $\bmu_t$ obtenues après relaxation, ici nous considérons simplement les BMUs $\bmu_t\m{1}$ et  $\bmu_t\m{2}$ comme sortie de l'architecture.
-Les poids ne sont pas mis à jour entre chaque itération, ce qui permet de considérer une phase de test comme un échantillonnage de la variable aléatoire $(\inpx\m{1},\inpx\m{2}, U, \bmu\m{1}, \bmu\m{2}$) }
+Les poids ne sont pas mis à jour entre chaque itération, ce qui permet de considérer une phase de test comme un échantillonnage de la variable aléatoire $(\inpx\m{1},\inpx\m{2}, U, \bmu\m{1}, \bmu\m{2}$). }
 \label{fig:flowchart}
 \end{figure}
 
@@ -322,7 +322,7 @@ Grâce à cette méthode, nous pouvons visualiser le dépliement d'une carte de 
 
 \section{Conclusion}
 
-Dans cette section, nous avons exposé la méthode d'analyse de l'architecture de cartes ainsi que les tracés que nous emploierons dans nos expériences à venir. 
+Dans ce chapitre, nous avons exposé la méthode d'analyse de l'architecture de cartes ainsi que les tracés que nous emploierons dans les expériences présentées par la suite. 
 Nous avons souligné l'importance de faire apparaître une organisation dans les réponses des cartes plutôt que seulement dans leurs poids.
 
 Nous avons d'abord proposé un cadre d'étude dans lequel les entrées et les réponses des cartes sont modélisées comme des variables aléatoires, échantillonnées durant des étape de test qui peuvent être effectuées tout au long de l'apprentissage.
